src/test/resources/invalid_tests/InvalidRepeatInput.cnna
architecture InvalidRepeatInput{
    def input in
    def output out
    
    repeat 3{
        in ->
        fullyConnected(units=64
    }
    output{
        fullyConnected()
        activation.softmax()
    } -> out
}